<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ui.NewPassword">

    <TextView
        android:id="@+id/title_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/title_create_new_password" />

    <TextView
        android:id="@+id/subtitle_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/gris_claro"
        android:text="@string/subtitle_create_new_password" />

    <EditText
        android:id="@+id/field_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/placeholder_new_password"
        android:textColorHint="@color/gris_claro"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/field_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/placeholder_confirm_new_password"
        android:textColorHint="@color/gris_claro"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_naranja_redondo"
        android:textColor="@color/white"
        android:text="@string/text_buttom_create_new_password" />
</LinearLayout>