<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ui.forgetPassword.ForgetPassword">

    <TextView
        android:id="@+id/titulo_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:text="@string/title_password_reset" />

    <TextView
        android:id="@+id/subtitulo_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:lineSpacingExtra="4sp"
        android:text="@string/subtitle_password_reset"
        android:textColor="@color/gris_claro"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/campo_correo_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/placeholder_password_reset"
        android:textColorHint="@color/gris_claro"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/boton_recuperar_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/boton_naranja_redondo"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="12sp"
        android:layout_marginTop="40dp"
        android:text="@string/text_buttom_password_reset" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/texto_recuerdas_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_medium"
            android:textSize="14sp"
            android:textColor="@color/gris_claro"
            android:text="@string/text_remember_password_reset" />
        <TextView
            android:id="@+id/enlace_recuerdas_contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/naranja"
            android:text="@string/text_buttom_login" />
    </LinearLayout>

</LinearLayout>