<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.login.Login">

  <ImageView
      android:id="@+id/imagen_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/logo_shopu_transparente"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/titulo_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/inter_black"
      android:text="@string/title_login"
      android:textColor="@color/black"
      android:layout_marginHorizontal="20dp"
      android:textSize="24sp"
      app:layout_constraintTop_toBottomOf="@+id/imagen_login"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <EditText
      android:id="@+id/campo_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginHorizontal="20dp"
      android:autofillHints=""
      android:ems="10"
      android:fontFamily="@font/inter"
      android:textColor="@color/black"
      android:hint="@string/email_login"
      android:textColorHint="@color/gris_claro"
      android:background="@drawable/edit_text_border"
      android:inputType="textEmailAddress"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@+id/titulo_login"
      />

  <EditText
      android:id="@+id/campo_contraseña"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginHorizontal="20dp"
      android:autofillHints=""
      android:textColor="@color/black"
      android:textColorHint="@color/gris_claro"
      android:ems="10"
      android:fontFamily="@font/inter"
      android:hint="@string/password_login"
      android:background="@drawable/edit_text_border"
      android:inputType="textPassword"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@+id/campo_email"
      />

  <TextView
      android:id="@+id/olvidaste_enlace"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/inter_semibold"
      android:text="@string/forget_password"
      android:textColor="@color/naranja"
      android:textSize="12sp"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@+id/campo_contraseña"
      />

  <Button
      android:id="@+id/boton_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginHorizontal="20dp"
      android:text="@string/text_buttom_login"
      android:textColor="@color/white"
      android:fontFamily="@font/inter_semibold"
      android:textSize="12sp"
      android:background="@drawable/boton_naranja_redondo"
      app:layout_constraintTop_toBottomOf="@+id/olvidaste_enlace"
      />


  <LinearLayout
      android:id="@+id/linear_registrate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center"
      app:layout_constraintTop_toBottomOf="@+id/boton_login"
      >
    <TextView
        android:id="@+id/texto_no_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/text_register"
        android:textColor="@color/gris"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/registrate_enlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/text_register_enlace"
        android:textColor="@color/naranja"
        android:textSize="14sp" />
  </LinearLayout>

  <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginTop="20dp"
      android:layout_marginHorizontal="20dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintTop_toBottomOf="@id/linear_registrate"/>

  <TextView
      android:id="@+id/texto_otro_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/inter"
      android:text="@string/text_other_sigIn"
      android:textAlignment="center"
      android:layout_marginTop="16dp"
      android:textColor="@color/gris"
      android:textSize="14sp"
      app:layout_constraintTop_toBottomOf="@id/divider"
      />

  <ImageView
      android:id="@+id/boton_google"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/google_inicio"
      android:layout_marginTop="10dp"
      app:layout_constraintTop_toBottomOf="@id/texto_otro_login"
      />

  <ProgressBar
      android:id="@+id/pbLoading"
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/transparent_gris"
      android:elevation="10dp"
      android:padding="160dp"
      android:indeterminateTint="@color/naranja"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>