<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingHorizontal="30dp"
    tools:context=".ui.changedPasswrod.ChangedPassword">

    <ImageView
        android:id="@+id/image_changed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/exitoso_naranja" />

    <TextView
        android:id="@+id/title_changed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/title_changed_password" />

    <TextView
        android:id="@+id/subtitle_changed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/inter_medium"
        android:textSize="16sp"
        android:textColor="@color/gris_claro"
        android:text="@string/subtitle_changed_password" />

    <Button
        android:id="@+id/button_changed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/boton_naranja_redondo"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:text="@string/text_buttom_changed_password" />

</LinearLayout>
