<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.welcome.Welcome">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:adjustViewBounds="true"
        android:src="@drawable/imagen_bienvenida"/>

    <TextView
        android:id="@+id/titulo_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/inter_semibold"
        android:lineSpacingExtra="8sp"
        android:text="@string/title_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/amarillo"
        android:textSize="37sp"/>

    <TextView
        android:id="@+id/subtitulo_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/subtitle_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_bienvenida" />

    <Button
        android:id="@+id/boton_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_naranja_redondo"
        android:fontFamily="@font/inter_medium"
        android:text="@string/text_buttom_bienvenida"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>